--- a/travel/style.css
+++ b/travel/style.css
@@ -371,14 +371,13 @@ section {
 .stories-wrapper {
     width: 100%;
     display: flex;
-    margin: 37px 0 0 0;
-    background-image: url("assets/img/Rectangle33.jpg");
+    /* margin: 37px 0 0 0; */
     /* opacity: 0.3; */
     /* border: 1px solid black; */
 }
 
 .stories-title {
-    padding: 80px 0 0 553px;
+    padding: 80px 0 40px 553px;
     font-family: "RedHatText"; 
     font-style: normal; 
     font-weight: 500;  
@@ -391,7 +390,7 @@ section {
 .stories-img-container {
     display: flex; 
     flex-direction: column; 
-    padding: 43px 0 0 120px; 
+    padding: 40px 0 0 120px; 
     gap: 30px; 
     /* z-index: 2; */
 }
@@ -418,6 +417,7 @@ section {
 
 .stories-container {
     padding: 43px 0 0 42px; 
+    /* padding: 0 0 0 42px;  */
 }
 
 .story-title1 {
@@ -430,7 +430,7 @@ section {
 }
 
 .story-title2 {
-    padding: 50px 0 0 0;
+    padding: 48px 0 0 0;
     font-family: "Aleo"; 
     font-style: normal; 
     font-weight: 400; 
@@ -440,7 +440,7 @@ section {
 }
 
 .story-title3 {
-    padding: 50px 0 0 0;
+    padding: 48px 0 0 0;
     font-family: "Aleo"; 
     font-style: normal; 
     font-weight: 400; 
@@ -450,7 +450,7 @@ section {
 }
 
 .story-title4 {
-    padding: 50px 0 0 0;
+    padding: 48px 0 0 0;
     font-family: "Aleo"; 
     font-style: normal; 
     font-weight: 400; 
@@ -510,18 +510,33 @@ section {
 
 .wrapper-section-footer {
     margin-bottom: auto; 
+    width: 100%;
+    background-image: url("assets/img/Rectangle33.jpg");
+    background-repeat: no-repeat;
 }
 
 
 .footer-container {
+    width: 100%;
+    height: 33.65px;
+    margin: 63px 0 0 0;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 20px;
+    justify-content: flex-start;
+    align-items: flex-start;
     /* border: 1px solid firebrick; */
 }
 
-.github-link {
+.footer-text {
+    padding: 0 0 0 588px;
+    font-family: 'Red Hat Text';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 17px;
+    line-height: 21px;
+    color: #ffffff;
+}
+
+/* .github-link {
     padding: 0 10px; 
     text-decoration: none; 
     color: black;
@@ -530,6 +545,6 @@ section {
     padding: 0 0 0 20px;
     width: 70px; 
     height: 35px; 
-}
+} */
 
 
