--- a/travel/popup.css
+++ b/travel/popup.css
@@ -1,8 +1,6 @@
-.hide{
-    visibility: hidden; 
-    /* transition: 2s visibility; */
+.hide {
+    display: none;
  }
-
 
 .pop-up {
     width: 100%;
@@ -13,29 +11,237 @@
     background-color: rgba(255, 255, 255, 0.3); 
 }
 
-.login-container {
-    display: flex;
-    flex-direction: column;
-}
-
 .pop-up-container {
-    display: flex; 
-    flex-direction: column;
-    justify-content: center; 
-    align-items: center; 
-    /* size: auto; */
     max-width: 34.5%;
     max-height: 69%;
     margin: 8.15% 0 0 32.8%;
     background: linear-gradient(177.09deg, #FFFFFF 6.15%, #0D606F 202.69%); 
-    border-radius: 16px;
-    /* transition: all 2s linear; */
+    border-radius: 16px; 
  }
 
- .register-link {
-    font-family: "Aleo-Bold";
-    font-weight: 700;
-    color: #0D606F;
-    text-decoration: underline;
+ .pop-up-wrapper {
+    display: flex; 
+    flex-direction: column;
+    align-items: center; 
+    /* margin: 10% 0 0 5%; */
+    width: 100%;
+    height: 100%;
  }
+ 
+ .pop-up-header1 {
+    margin: 4% 2% 0 2%;
+    font-family: "Aleo-Bold"; 
+    font-weight: 700;
+    font-size: 200%;
+    color:  #0D606F;
+ }
+ 
+ .pop-up-header2 {
+    margin: 4% 2% 0 2%;
+    font-family: "Aleo-Bold"; 
+    font-weight: 700;
+    font-size: 200%;
+    color:  #0D606F;
+ }
+
+ .social-wrapper {
+    /* display: flex; 
+    flex-direction: column; 
+    align-items: center; */
+    width: 100%;
+ }
+
+ .facebook {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 4.3% 2% 0 7.3%; 
+    width: 85.3%;
+    background-color: #1877F2;
+    border: none;
+    border-radius: 10px;
+ }
+
+ .facebook-logo {
+    margin: 0 0 0 1.3%;
+ }
+
+ .facebook-sign {
+    margin: 2.8% 1.8% 2.7% 2%; 
+    padding: 0 0 0 0.4%;
+    font-family: "RedHatText"; 
+    font-weight: 400; 
+    font-size: 150%;
+    color: #FFFFFF;
+ }
+
+ .google {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 3% 2% 0 7.3%;  
+    width: 85.3%;
+    background-color: #FFFFFF;
+    border: none;
+    border-radius: 10px;
+ }
+
+ .google-logo {
+    margin: 0 0 0 1.2%;
+ }
+
+ .google-sign {
+    margin: 2.6% 1.8% 2.7% 2%; 
+    padding: 0 0 0 0.4%;
+    font-family: "RedHatText"; 
+    font-weight: 400; 
+    font-size: 150%;
+    color:  #0D606F;
+ }
+
+ .lines {
+    margin: 5% 0 -2.8% 0;
+     width: 100%;
+ }
+ 
+ .lines-wrapper {
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     width: 100%;
+ }
+ 
+ .line-text {
+    display: flex;
+    flex: calc(0.93);
+    margin: 0 2% 0 2%;
+    line-height: 1em;
+    font-family: 'Aleo'; 
+    font-weight: 400; 
+    font-size: 115%;
+    color: #0D606F;
+ }
+
+ .line-text:before, .line-text:after {
+    content: '';
+    flex-grow: calc(0.93);
+    margin: 0px 2%;
+    background: linear-gradient(to right, rgba(13, 96, 111, 0.5), rgba(13, 96, 111, 0.5));
+    /* background-color: rgba(13, 96, 111, 0.5); */
+    background-size: 1% 1%;
+    background-position: 0% 50%;
+    background-repeat: repeat-x;
+ }
+
+.sign-in-container {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    /* height: 50%; */
+}
+
+.input-title {
+    margin: 4.6% 0 0 7%;
+    font-family: 'Aleo'; 
+    font-weight: 400; 
+    color: #0D606F;
+}
+
+#login{
+    margin: 1.1% 0 -1.3% 7.1%;;
+    padding: 5.5% 0 0 0; 
+    width: 85.3%; 
+    height: 30%;
+    border: none;
+    border-radius: 10px;
+}
+
+#pass {
+    margin: 0.7% 0 0 7.1%;
+    padding: 5.5% 0 0 0; 
+    width: 85.3%; 
+    height: 30%;
+    border: none;
+    border-radius: 10px;
+}
+
+.sign-in-button {
+    margin: 4.1% 0 0 7.1%;
+    padding: 2.25% 0 2.25% 0; 
+    width: 85.3%; 
+    font-family: "RedHatText"; 
+    font-weight: 400; 
+    font-size: 119%;
+    color:  #ffffff;
+    border: none; 
+    border-radius: 10px; 
+    background-color: #0D606F;
+}
+
+.under-button-text{
+    margin: 2% 0 0 0;
+    font-family: "Aleo-Bold"; 
+    font-weight: 700;
+    font-size: 95%;
+    text-decoration: underline;
+    color: #0D606F;
+}
+
+.line {
+    margin: 3.7% 0 0 0; 
+    width: 100%; 
+    
+}
+
+.long-line {
+    margin: 0 3.25% 0 7.5%;
+    width: 85.3%; 
+    border: 1px solid rgba(13, 96, 111, 0.5);
+}
+
+.register {
+    width: 100%;
+    align-content: center;
+}
+
+.register-text {
+    margin: 3% 16.51% 4.8% 33.2%;
+    font-family: "Aleo-Bold"; 
+    font-weight: 700;
+    font-size: 92%;
+    color: rgba(13, 96, 111, 0.5);
+}
+
+.register-link {
+    padding: 0 0 0 0.8%;
+    text-decoration: underline;
+    color: #0D606F;
+}
+
+.register-link:hover {
+    cursor: pointer;
+}
+
+.login {
+    width: 100%;
+    align-content: center;
+}
+
+.login-text {
+    margin: 3% 16.51% 4.8% 33.2%;
+    font-family: "Aleo-Bold"; 
+    font-weight: 700;
+    font-size: 92%;
+    color: rgba(13, 96, 111, 0.5);
+}
+
+.login-ref {
+    padding: 0 0 0 0.8%;
+    text-decoration: underline;
+    color: #0D606F;
+}
+
+.login-ref:hover {
+    cursor: pointer;
+}
 
