--- a/travel/style.css
+++ b/travel/style.css
@@ -569,6 +569,18 @@ section {
     /* margin: 0 0 60px 0; */
 }
 
+.stories-button{
+    display: flex; 
+    justify-content: flex-start; 
+    align-items: center; 
+    width: 228px; 
+    height: 59px; 
+    background-color: #0d606f; 
+    box-shadow: 0px 0px 3px rgba(13, 96, 111, 0.08), 0px 2px 3px rgba(13, 96, 111, 0.16);
+    border: none;
+    border-radius: 10px; 
+}
+
 .footer {
     display: flex;
     justify-content: space-between;
@@ -646,6 +658,25 @@ section {
 
     .body {
         width: 100%;
+    }
+
+    .burger-menu {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+        background-color: rgba(255, 255, 255, 0.3); 
+    }
+
+    .pop-up-container {
+        display: flex; 
+        flex-direction: column;
+        align-items: center; 
+        max-width: 20%;
+        max-height: 40%;
+        background: #f2785c; 
+        border-radius: 10px; 
     }
 
     .wrapper-header-preview {
